[gd_scene load_steps=10 format=3 uid="uid://da2mi25h7x2cu"]

[ext_resource type="Script" uid="uid://t2wocd1wtyks" path="res://Game/Levels/ToneGame.gd" id="1_1yube"]
[ext_resource type="AudioStream" uid="uid://dww8xs5yd537n" path="res://Game/Audio/Clicks/switch1.ogg" id="2_l3ppg"]
[ext_resource type="Script" uid="uid://53moi3obviwh" path="res://Game/Scripts/ScalesManager.gd" id="4_2holh"]
[ext_resource type="FontFile" uid="uid://cfgjxqr22llhe" path="res://Game/Font/EBGaramond-Medium.ttf" id="4_abuft"]
[ext_resource type="FontFile" uid="uid://dvodb7k6kojyk" path="res://Game/Font/FaunaOne-Regular.ttf" id="5_abuft"]
[ext_resource type="PackedScene" uid="uid://dhksvttb8b00" path="res://Game/Scenes/UI/SimpleButton.tscn" id="5_c8ytr"]
[ext_resource type="Texture2D" uid="uid://kyk8n7c058xu" path="res://Game/Sprites/UI/Icon_Cancel.png" id="6_n8a3h"]
[ext_resource type="PackedScene" uid="uid://oce7o2nmo5cb" path="res://Game/Scenes/Sheets/SheetRenderer.tscn" id="9_abuft"]
[ext_resource type="AudioStream" uid="uid://cgwpt731tquyo" path="res://Game/Audio/Melodies/WinMelody_placeholder.wav" id="9_ugqfd"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("metro", "scaleManager", "sheet_renderer", "lbl_current_tone", "lbl_score", "lbl_repetitions", "slider_bpm", "lbl_bpm", "lbl_recognized_tone", "itemlist_scale_key", "itemlist_scale_type", "win_audio_player", "tone_audio_player")]
script = ExtResource("1_1yube")
_debug_note_success = true
tones = Array[String](["C", "D", "E", "F", "G", "A", "B", "C", "C", "B", "A", "G", "F", "E", "D", "C"])
metro = NodePath("Metronome")
scaleManager = NodePath("ScalesManager")
sheet_renderer = NodePath("NoteUI/SheetRenderer")
beat_offset = 2
lbl_current_tone = NodePath("NoteUI/LblToneToHit")
lbl_score = NodePath("NoteUI/ProgressionUI/LblToneScore")
lbl_repetitions = NodePath("NoteUI/LblRepetitions")
slider_bpm = NodePath("NoteUI/SettingsUI/BPMSettings/BPMSlider")
lbl_bpm = NodePath("NoteUI/SettingsUI/BPMSettings/BPMValue")
lbl_recognized_tone = NodePath("NoteUI/LblRecognizedTone")
itemlist_scale_key = NodePath("NoteUI/SettingsUI/ProgressionSettings/ScaleKeyList")
itemlist_scale_type = NodePath("NoteUI/SettingsUI/ProgressionSettings/ScaleTypeList")
regognized_tone_ui_delay = 0.075
win_audio_player = NodePath("WinPlayer")
win_audio_time = 5.0
tone_audio_player = NodePath("TonePlayer")

[node name="ScalesManager" type="Node" parent="."]
script = ExtResource("4_2holh")

[node name="NoteUI" type="CanvasLayer" parent="."]

[node name="DebugUI" type="Control" parent="NoteUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LblTone" type="Label" parent="NoteUI/DebugUI"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 495.0
offset_right = 111.0
offset_bottom = 518.0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("4_abuft")
text = "Tone: "
vertical_alignment = 1

[node name="LblRecordExist" type="Label" parent="NoteUI/DebugUI"]
modulate = Color(1, 1, 1, 0.196078)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 520.0
offset_right = 104.0
offset_bottom = 543.0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("4_abuft")
text = "Rec"
vertical_alignment = 1

[node name="LblSpectrumExist" type="Label" parent="NoteUI/DebugUI"]
modulate = Color(1, 1, 1, 0.196078)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 544.0
offset_right = 107.0
offset_bottom = 567.0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("4_abuft")
text = "Spect"
vertical_alignment = 1

[node name="LblCanRecord" type="Label" parent="NoteUI/DebugUI"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 208.0
offset_top = 623.0
offset_right = 255.0
offset_bottom = 646.0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("4_abuft")
text = "Can record: "
vertical_alignment = 1

[node name="SettingsUI" type="Control" parent="NoteUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VolCutSettings" type="Control" parent="NoteUI/SettingsUI"]
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 104.0

[node name="Label" type="Label" parent="NoteUI/SettingsUI/VolCutSettings"]
layout_mode = 0
offset_top = -4.0
offset_right = 40.0
offset_bottom = 19.0
text = "Filter vol:"
vertical_alignment = 1

[node name="VolFilterSlider" type="HSlider" parent="NoteUI/SettingsUI/VolCutSettings"]
layout_mode = 0
offset_left = 66.0
offset_right = 375.0
offset_bottom = 16.0
max_value = 0.5
step = 0.01

[node name="VolFilterValue" type="Label" parent="NoteUI/SettingsUI/VolCutSettings"]
layout_mode = 0
offset_left = 393.0
offset_top = -4.0
offset_right = 433.0
offset_bottom = 19.0
text = "0.0"
vertical_alignment = 1

[node name="BPMSettings" type="Control" parent="NoteUI/SettingsUI"]
anchors_preset = 0
offset_left = 64.0
offset_top = 112.0
offset_right = 104.0
offset_bottom = 152.0

[node name="Label" type="Label" parent="NoteUI/SettingsUI/BPMSettings"]
layout_mode = 0
offset_top = -4.0
offset_right = 40.0
offset_bottom = 19.0
text = "BPM:"
vertical_alignment = 1

[node name="BPMSlider" type="HSlider" parent="NoteUI/SettingsUI/BPMSettings"]
layout_mode = 0
offset_left = 66.0
offset_right = 375.0
offset_bottom = 16.0
min_value = 40.0
max_value = 200.0
step = 5.0
value = 40.0

[node name="BPMValue" type="Label" parent="NoteUI/SettingsUI/BPMSettings"]
layout_mode = 0
offset_left = 393.0
offset_top = -4.0
offset_right = 433.0
offset_bottom = 19.0
text = "100"
vertical_alignment = 1

[node name="PlaySettings" type="Control" parent="NoteUI/SettingsUI"]
anchors_preset = 0
offset_left = 64.0
offset_top = 166.0
offset_right = 104.0
offset_bottom = 206.0

[node name="Label" type="Label" parent="NoteUI/SettingsUI/PlaySettings"]
layout_mode = 0
offset_top = -4.0
offset_right = 40.0
offset_bottom = 19.0
text = "Play:"
vertical_alignment = 1

[node name="PlayButton" type="CheckButton" parent="NoteUI/SettingsUI/PlaySettings"]
layout_mode = 0
offset_left = 59.0
offset_top = -4.0
offset_right = 103.0
offset_bottom = 20.0

[node name="ProgressionSettings" type="Control" parent="NoteUI/SettingsUI"]
anchors_preset = 0
offset_left = 64.0
offset_top = 215.0
offset_right = 104.0
offset_bottom = 255.0

[node name="Label" type="Label" parent="NoteUI/SettingsUI/ProgressionSettings"]
layout_mode = 0
offset_top = -4.0
offset_right = 40.0
offset_bottom = 19.0
text = "Scale:"
vertical_alignment = 1

[node name="ScaleKeyList" type="ItemList" parent="NoteUI/SettingsUI/ProgressionSettings"]
layout_mode = 0
offset_left = 67.0
offset_top = -4.0
offset_right = 144.0
offset_bottom = 41.0
item_count = 2
item_0/text = "c"
item_1/text = "c#"

[node name="ScaleTypeList" type="ItemList" parent="NoteUI/SettingsUI/ProgressionSettings"]
layout_mode = 0
offset_left = 152.0
offset_top = -4.0
offset_right = 320.0
offset_bottom = 40.0
item_count = 2
item_0/text = "c"
item_1/text = "c#"

[node name="ProgressionUI" type="Control" parent="NoteUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -20.0
offset_right = -31.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LblToneScore" type="Label" parent="NoteUI/ProgressionUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 145.5
offset_top = -69.0
offset_right = 240.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Score: "
horizontal_alignment = 1

[node name="LblToneToHit" type="Label" parent="NoteUI"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 361.0
offset_top = -105.0
offset_right = 454.0
offset_bottom = -57.0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("5_abuft")
theme_override_font_sizes/font_size = 36
text = "Tone: "

[node name="LblRecognizedTone" type="Label" parent="NoteUI"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -105.0
offset_right = -347.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("5_abuft")
theme_override_font_sizes/font_size = 20
text = "A5 (440Hz) "
horizontal_alignment = 2
vertical_alignment = 2

[node name="LblRepetitions" type="Label" parent="NoteUI"]
offset_left = 361.0
offset_top = 206.0
offset_right = 561.0
offset_bottom = 249.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.196078)
theme_override_fonts/font = ExtResource("5_abuft")
theme_override_font_sizes/font_size = 28
text = "Repetitions: "
vertical_alignment = 1

[node name="SheetRenderer" parent="NoteUI" node_paths=PackedStringArray("tone_game") instance=ExtResource("9_abuft")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_right = -400.0
offset_bottom = 0.0
tone_game = NodePath("../..")
fade_size = 700.0
new_sequence_position = 1600.0

[node name="BtnCancel" parent="NoteUI" instance=ExtResource("5_c8ytr")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = 112.0
grow_horizontal = 0
icon_texture = ExtResource("6_n8a3h")

[node name="Metronome" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_l3ppg")
volume_db = -20.0

[node name="Environment" type="Node2D" parent="."]

[node name="WinPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ugqfd")

[node name="TonePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ugqfd")

[connection signal="value_changed" from="NoteUI/SettingsUI/BPMSettings/BPMSlider" to="." method="_on_bpm_slider_value_changed"]
[connection signal="item_selected" from="NoteUI/SettingsUI/ProgressionSettings/ScaleKeyList" to="." method="_on_scale_key_list_item_selected"]
[connection signal="item_selected" from="NoteUI/SettingsUI/ProgressionSettings/ScaleTypeList" to="." method="_on_scale_type_list_item_selected"]
[connection signal="button_down" from="NoteUI/BtnCancel" to="." method="_on_simple_button_button_down"]
